--- a/package.json
+++ b/package.json
@@ -2,5 +2,24 @@
   "dependencies": {
     "bootstrap": "^5.3.7",
     "react-bootstrap": "^2.10.10"
-  }
+  },
+  "name": "epibooks",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GIovannaBonomo/Epibooks.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/GIovannaBonomo/Epibooks/issues"
+  },
+  "homepage": "https://github.com/GIovannaBonomo/Epibooks#readme",
+  "description": ""
 }
